--- a/src/DocBundle/Resources/views/cnpdocument/new.html.twig
+++ b/src/DocBundle/Resources/views/cnpdocument/new.html.twig
@@ -6,8 +6,8 @@
     {{ form_start(form, {'attr': {'class': 'form-horizontal'}}) }}
 
     {{ include("DocBundle:cnpdocument:form.html.twig") }}
-    <button type="submit" class="glyphicon glyphicon-ok btn btn-primary btn-md">Valider</button>
-    <button type="reset" class="glyphicon btn btn-default btn-md">reset</button>
+    <button type="submit" class="glyphicon glyphicon-ok btn btn-primary btn-md">Créer</button>
+    <button type="reset" class="btn btn-default btn-md">Annuler</button>
 
     {{ form_end(form) }}
 </div>
