--- a/src/DocBundle/Resources/views/cnpdocument/show.html.twig
+++ b/src/DocBundle/Resources/views/cnpdocument/show.html.twig
@@ -1,13 +1,13 @@
 {% extends 'DocBundle:Default:index.html.twig' %}
 
 {% block body %}
-    <h1>CnpDocument</h1>
+    <h1>Paramètrage</h1>
 
-    <table>
+    <table class="table table-striped table-responsive table-bordered">
         <tbody>
             <tr>
-                <th>Id</th>
-                <td>{{ cnpDocument.id }}</td>
+                <!--<th>Id</th>
+                <td>{{ cnpDocument.id }}</td>-->
             </tr>
             <tr>
                 <th>Partenaires</th>
@@ -39,9 +39,9 @@
             </tr>
             <tr>
                 <th>Pdfsource</th>
-                <td><a href="{{ asset('uploads/pdf/' ~ cnpDocument.pdfSource.title) }}">{{ cnpDocument.pdfSource.title }}</a></td>
+                <td><a href="{{ path('cnpdocument_show_pdf', { 'id': cnpDocument.id }) }}">{{ cnpDocument.pdfName }}</a></td>
             </tr>
-            <tr>
+            <!--<tr>
                 <th>Commentaire</th>
                 <td>{{ cnpDocument.commentaire }}</td>
             </tr>
@@ -52,21 +52,15 @@
             <tr>
                 <th>Createdat</th>
                 <td>{% if cnpDocument.createdAt %}{{ cnpDocument.createdAt|date('Y-m-d H:i:s') }}{% endif %}</td>
-            </tr>
+            </tr>-->
         </tbody>
     </table>
+    <a href="{{ path('cnpdocument_edit', { 'id': cnpDocument.id }) }}">
+        <button type="button" class="btn btn-primary">Modifier</button>
+    </a>
 
-    <ul>
-        <li>
-            <a href="{{ path('cnpdocument_index') }}">Back to the list</a>
-        </li>
-        <li>
-            <a href="{{ path('cnpdocument_edit', { 'id': cnpDocument.id }) }}">Edit</a>
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
-    </ul>
+    <a href="{{ path('cnpdocument_index') }}"><button type="button" class="btn btn-info">Retourner à la liste</button></a>
+    {{ form_start(delete_form) }}
+    <button type="button" class="btn btn-danger">Supprimer</button>
+    {{ form_end(delete_form) }}
 {% endblock %}
