--- a/src/DocBundle/Resources/views/reseau/edit.html.twig
+++ b/src/DocBundle/Resources/views/reseau/edit.html.twig
@@ -1,21 +1,25 @@
 {% extends 'DocBundle:Default:index.html.twig' %}
 
 {% block body %}
-    <h1>Reseau edit</h1>
+    <h1>Modification d'un paramètre</h1>
+    {% if confirmation is defined %}
+        <div class="alert alert-success">
+            <strong>Success!</strong> Le paramètre aété modifié avec succès.
+        </div>
+    {% endif %}
+    <div class="well">
+        {{ form_start(form, {'attr': {'class': 'form-horizontal'}}) }}
 
-    {{ form_start(edit_form) }}
-        {{ form_widget(edit_form) }}
-        <input type="submit" value="Edit" />
-    {{ form_end(edit_form) }}
+        {{ include("DocBundle:reseau:form.html.twig") }}
+        <button type="submit" class="glyphicon glyphicon-ok btn btn-primary btn-md">Modifier</button>
 
-    <ul>
-        <li>
-            <a href="{{ path('reseau_index') }}">Back to the list</a>
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
-    </ul>
+        {{ form_end(form) }}
+    </div>
+
+    <a href="{{ path('reseau_index') }}"><button type="button" class="btn btn-info">Retourner à la liste</button></a>
+
+    {{ form_start(delete_form) }}
+    <button type="button" class="btn btn-danger">Supprimer</button>
+    {{ form_end(delete_form) }}
+
 {% endblock %}
