--- a/src/DocBundle/Resources/views/reseau/index.html.twig
+++ b/src/DocBundle/Resources/views/reseau/index.html.twig
@@ -1,12 +1,15 @@
 {% extends 'DocBundle:Default:index.html.twig' %}
 
 {% block body %}
-    <h1>Reseau list</h1>
+    {% if reseaus is empty %}
+    <h1>Aucun réseau n'a été enregistré.</h1>
+    {% else %}
+    <h1>Liste des réseaux</h1>
 
-    <table>
+    <table class="table table-striped table-responsive table-bordered">
         <thead>
             <tr>
-                <th>Id</th>
+                <!--<th>Id</th>-->
                 <th>Code</th>
                 <th>Name</th>
                 <th>Actions</th>
@@ -15,7 +18,7 @@
         <tbody>
         {% for reseau in reseaus %}
             <tr>
-                <td><a href="{{ path('reseau_show', { 'id': reseau.id }) }}">{{ reseau.id }}</a></td>
+                <!--<td><a href="{{ path('reseau_show', { 'id': reseau.id }) }}">{{ reseau.id }}</a></td>-->
                 <td>{{ reseau.code }}</td>
                 <td>{{ reseau.name }}</td>
                 <td>
@@ -32,10 +35,9 @@
         {% endfor %}
         </tbody>
     </table>
+    {% endif %}
 
-    <ul>
-        <li>
-            <a href="{{ path('reseau_new') }}">Create a new entry</a>
-        </li>
-    </ul>
+    <a href="{{ path('reseau_new') }}">
+        <button type="button" class="btn btn-primary">Créer un réseau</button>
+    </a>
 {% endblock %}
