--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -15,15 +15,37 @@
 
             <h1>Données de paramètrage</h1>
         </div>
+        <div>
+            {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+                {{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }} |
+                <a href="{{ path('fos_user_security_logout') }}">
+                    {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
+                </a>
+            {% else %}
+                <a href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a>
+            {% endif %}
+        </div>
         <div class="row">
             <div id="menu" class="col-md-2">
                 <h3>Menu</h3>
-                <ul class="nav nav-pills nav-stacked">
-                    <li><a href="{{ path('doc_homepage') }}">Accueil</a></li>
-                    <li><a href="{{ path('cnpdocument_index') }}">Paramètrage</a></li>
-                    <li><a href="{{ path('reseau_index') }}">Réseaux</a></li>
-                    <li><a href="{{ path('reseau_index') }}">Charger un CSV</a></li>
-                </ul>
+                <nav class="nav-collapse" role="navigation">
+                    <ul class="nav">
+                        <li><a href="{{ path('doc_homepage') }}">Accueil</a></li>
+                        <li class="divider-vertical "></li>
+                        <li class="dropdown">
+                            <a data-toggle="dropdown" class="dropdown-toggle" href="{{ path('reseau_index') }}">Réseaux <b class="caret"></b></a>
+                            {{ render(controller("DocBundle:Reseau:menu")) }}
+                        </li>
+                        <li class="divider-vertical"></li>
+                        <li><a href="{{ path('parametrage_index') }}">Paramètrages</a></li>
+                        <li><a href="{{ path('reseau_index') }}">Gestion des réseaux</a></li>
+                        <li class="divider-vertical"></li>
+                        <li><a href="{{ path('reseau_index') }}">Charger un CSV</a></li>
+                        {% if is_granted('ROLE_USER') %}
+                            <li><a href="{{ path('user_homepage') }}">Utilisateurs</a></li>
+                        {% endif %}
+                    </ul>
+                </nav>
             </div>
             <div id="content" class="col-md-10">
                 {% block body %}
