--- a/src/DocBundle/Resources/views/reseau/index.html.twig
+++ b/src/DocBundle/Resources/views/reseau/index.html.twig
@@ -6,7 +6,7 @@
     {% else %}
     <h1>Liste des réseaux</h1>
 
-    <table class="table table-striped table-responsive table-bordered">
+    <table class="table table-striped table-bordered table-condensed table-responsive">
         <thead>
             <tr>
                 <!--<th>Id</th>-->
