--- a/src/DocBundle/Resources/views/reseau/reseau_params.html.twig
+++ b/src/DocBundle/Resources/views/reseau/reseau_params.html.twig
@@ -1,12 +1,20 @@
 {% extends 'DocBundle:Default:index.html.twig' %}
+{% block stylesheets %}
+    {{ parent() }}
+{% endblock %}
 
 {% block body %}
     {% if  parametrages is empty %}
         <h2>Aucun paramètrage n'a été enregistré pour ce réseau.</h2>
     {% else %}
-    <h1>La liste des paramètrages</h1>
-
-    <table class="table table-striped table-responsive table-bordered">
+    <h2>La liste des paramètrages de {{ reseau.name }}</h2>
+    <!--<div id="wait" >
+        <h2>Génération...</h2>
+        {% image '@DocBundle/Resources/public/images/default.svg' %}
+            <img src="{{ asset_url }}" alt="loader" />
+        {% endimage %}
+    </div>-->
+    <table class="table table-striped table-bordered table-condensed table-responsive">
         <thead>
             <tr>
                 <!--<th>Id</th>-->
@@ -60,9 +68,41 @@
         </tbody>
     </table>
     {% endif %}
+    <div class="modal fade" id="myModal" role="dialog" >
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Statut de la génération</h4>
+                </div>
+                <div class="modal-body">
+                    <p id="requestStatus">Génération en cours.</p>
+                    {% image '@DocBundle/Resources/public/images/default.svg' %}
+                    <img src="{{ asset_url }}" alt="loader" />
+                    {% endimage %}
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Fermer</button>
+                </div>
+            </div>
 
+        </div>
+    </div>
 
-    <a href="{{ path('parametrage_new') }}">
-        <button type="button" class="btn btn-primary">Générer</button>
-    </a>
+    {{ form_start(form, {'attr': {'class': 'form-horizontal', 'id': 'generateForm'}}) }}
+        <button type="submit" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Générer</button>
+    {{ form_end(form) }}
+
+    {{ form_start(exportForm, {'attr': {'class': 'form-horizontal', 'id': 'generateForm'}}) }}
+        <button type="submit" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Exporter en CSV</button>
+    {{ form_end(exportForm) }}
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script type="application/javascript">
+        $(document).ready(function() {
+            synchroneRequest('#generateForm');
+        });
+    </script>
 {% endblock %}
