--- a/src/DocBundle/Resources/views/reseau/show.html.twig
+++ b/src/DocBundle/Resources/views/reseau/show.html.twig
@@ -27,7 +27,7 @@
     <a href="{{ path('reseau_delete', {'id': reseau.id}) }}"><button type="button" class="btn btn-danger">Supprimer</button></a>
 
     <!--{{ form_start(delete_form) }}
-    <button type="button" class="btn btn-danger">Supprimer</button>
+    <button type="submit" class="btn btn-danger">Supprimer</button>
     {{ form_end(delete_form) }}-->
 
 {% endblock %}
