--- a/src/DocBundle/Resources/public/css/style.css
+++ b/src/DocBundle/Resources/public/css/style.css
@@ -9,3 +9,36 @@
     padding:2px;
     background-color: #E5E6EA;
 }
+
+.navbar-static-top {
+    margin-bottom:20px;
+}
+
+i {
+    font-size:18px;
+}
+
+footer {
+    margin-top:20px;
+    padding-top:20px;
+    padding-bottom:20px;
+    background-color:#434A54;
+    color: #FFFFFF;
+}
+
+.nav>li .count {
+    position: absolute;
+    top: 10%;
+    right: 25%;
+    font-size: 10px;
+    font-weight: normal;
+    background: rgba(41,200,41,0.75);
+    color: rgb(255,255,255);
+    line-height: 1em;
+    padding: 2px 4px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    border-radius: 10px;
+}
