--- a/src/DocBundle/Resources/views/parametrage/index.html.twig
+++ b/src/DocBundle/Resources/views/parametrage/index.html.twig
@@ -2,63 +2,60 @@
 
 {% block body %}
     {% if  parametrages is empty %}
-        <h1>Aucun paramètrage n'a été enregistré</h1>
+        <h3><i class="glyphicon glyphicon-th-list"></i> Aucun paramètrage n'a été enregistré</h3>
+        <hr>
     {% else %}
-    <h1>La liste des paramètrages</h1>
 
-    <table class="table table-striped table-responsive table-bordered">
-        <thead>
-            <tr>
-                <!--<th>Id</th>-->
-                <th>Partenaires</th>
-                <th>Collectivites</th>
-                <th>Contrat</th>
-                <th>Libelle</th>
-                <th>Ordre</th>
-                <th>Type</th>
-                <th>Reference</th>
-                <th>Pdf</th>
-                <!--<th>Commentaire</th>
-                <th>Updateat</th>
-                <th>Createdat</th>-->
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for parametrage in parametrages %}
-            <tr>
-                <!--<td><a href="{{ path('parametrage_show', { 'id': parametrage.id }) }}">{{ parametrage.id }}</a></td>-->
-                <td>
-                    {{ parametrage.partenaires }}
-                </td>
-                <td>{{ parametrage.collectivites }}</td>
-                <td>{{ parametrage.contrat }}</td>
-                <td>{{ parametrage.libelle }}</td>
-                <td>{{ parametrage.ordre }}</td>
-                <td>{{ parametrage.type }}</td>
-                <td>{{ parametrage.reference }}</td>
-                <td><a href="{{ path('parametrage_show_pdf', { 'id': parametrage.id }) }}">{{ parametrage.pdfSource.title }}</a></td>
-                <!--<td>{{ parametrage.commentaire }}</td>
-                <td>{% if parametrage.updateAt %}{{ parametrage.updateAt|date('Y-m-d H:i:s') }}{% endif %}</td>
-                <td>{% if parametrage.createdAt %}{{ parametrage.createdAt|date('Y-m-d H:i:s') }}{% endif %}</td>-->
-                <td>
-                    <ul>
-                        <li>
-                            <a href="{{ path('parametrage_delete', { 'id': parametrage.id }) }}">
-                                <span class="glyphicon glyphicon-remove">Supprimer</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="{{ path('parametrage_edit', { 'id': parametrage.id }) }}">
-                                <span class="glyphicon glyphicon-pencil">Modifier</span>
-                            </a>
-                        </li>
-                    </ul>
-                </td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+    <h3><i class="glyphicon glyphicon-th-list"></i> La liste des paramètrages</h3>
+    <hr>
+    <div class="table-responsive">
+        <table class="table table-striped table-bordered">
+            <thead>
+                <tr>
+                    <th>Partenaires</th>
+                    <th>Collectivites</th>
+                    <th>Contrat</th>
+                    <th>Libelle</th>
+                    <th>Ordre</th>
+                    <th>Type</th>
+                    <th>Reference</th>
+                    <th>Pdf</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+            {% for parametrage in parametrages %}
+                <tr>
+                    <td>
+                        {{ parametrage.partenaires }}
+                    </td>
+                    <td>{{ parametrage.collectivites }}</td>
+                    <td>{{ parametrage.contrat }}</td>
+                    <td>{{ parametrage.libelle }}</td>
+                    <td>{{ parametrage.ordre }}</td>
+                    <td>{{ parametrage.type }}</td>
+                    <td>{{ parametrage.reference }}</td>
+                    <td><a href="{{ path('parametrage_show_pdf', { 'id': parametrage.id }) }}">{{ parametrage.pdfSource.title }}</a></td>
+                    <!--<td>{{ parametrage.commentaire }}</td>-->
+                    <td>
+                        <ul>
+                            <li>
+                                <a href="{{ path('parametrage_delete', { 'id': parametrage.id }) }}">
+                                    <span class="glyphicon glyphicon-remove">Supprimer</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="{{ path('parametrage_edit', { 'id': parametrage.id }) }}">
+                                    <span class="glyphicon glyphicon-pencil">Modifier</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
     {% endif %}
 
 
