--- a/src/DocBundle/Resources/views/reseau/index.html.twig
+++ b/src/DocBundle/Resources/views/reseau/index.html.twig
@@ -4,41 +4,41 @@
     {% if reseaus is empty %}
     <h1>Aucun réseau n'a été enregistré.</h1>
     {% else %}
-    <h1>Liste des réseaux</h1>
-
-    <table class="table table-striped table-bordered table-condensed table-responsive">
-        <thead>
-            <tr>
-                <!--<th>Id</th>-->
-                <th>Code</th>
-                <th>Name</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for reseau in reseaus %}
-            <tr>
-                <!--<td><a href="{{ path('reseau_show', { 'id': reseau.id }) }}">{{ reseau.id }}</a></td>-->
-                <td>{{ reseau.code }}</td>
-                <td>{{ reseau.name }}</td>
-                <td>
-                    <ul>
-                        <li>
-                            <a href="{{ path('reseau_edit', { 'id': reseau.id }) }}">
-                                <span class="glyphicon glyphicon-pencil">Modifier</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="{{ path('reseau_delete', { 'id': reseau.id }) }}">
-                                <span class="glyphicon glyphicon-remove">Supprimer</span>
-                            </a>
-                        </li>
-                    </ul>
-                </td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+        <h3><i class="glyphicon glyphicon-th-list"></i> La liste des réseaux</h3>
+        <hr>
+        <table class="table table-striped table-responsive">
+            <thead>
+                <tr>
+                    <!--<th>Id</th>-->
+                    <th>Code</th>
+                    <th>Name</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+            {% for reseau in reseaus %}
+                <tr>
+                    <!--<td><a href="{{ path('reseau_show', { 'id': reseau.id }) }}">{{ reseau.id }}</a></td>-->
+                    <td>{{ reseau.code }}</td>
+                    <td>{{ reseau.name }}</td>
+                    <td>
+                        <ul>
+                            <li>
+                                <a href="{{ path('reseau_edit', { 'id': reseau.id }) }}">
+                                    <span class="glyphicon glyphicon-pencil">Modifier</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="{{ path('reseau_delete', { 'id': reseau.id }) }}">
+                                    <span class="glyphicon glyphicon-remove">Supprimer</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
     {% endif %}
 
     <a href="{{ path('reseau_new') }}">
